# FxUltimatBot6159

./: .gitignore  README.md  pyproject.toml  requirements.txt
backtest/: data_loader.py  engine.py  metrics.py
config/: default.yaml
config/symbols/: xauusdm.yaml
docs/: vps_setup.md
models/: lstm_transformer.pt
scripts/: backtest_run.py  live.py  train.py
src/: __init__.py
src/data/: __init__.py  feature_engine.py  multi_tf_loader.py  sentiment.py  tick_collector.py
src/execution/: __init__.py  broker.py  order_manager.py  spread_guard.py  virtual_tpsl.py
src/filters/: market_filter.py
src/models/: __init__.py  ensemble.py  lstm_transformer.py  rl_agent.py
src/orchestrator/: coordinator.py
src/risk/: __init__.py  position_sizer.py  risk_manager.py
src/utils/: __init__.py  config.py  logger.py
tests/: test_ensemble.py  test_feature_engine.py  test_market_filter.py  test_risk_manager.py  test_spread_guard.py  test_virtual_tpsl.py
